# touchegg-music-client

./: .SRCINFO  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  PKGBUILD  README.md
.github/workflows/: ci.yml
cmake/: code-style.cmake  touchegg-dependency.cmake  touchegg_cmake_warnings.patch
cmake/modules/: FindCairomm.cmake  FindDBus.cmake  FindGlibmm.cmake  FindLibPulse.cmake
docker/: Dockerfile.arch  Dockerfile.debian  Makefile  arch.Dockerfile  archlinux.Dockerfile  debian.Dockerfile
src/: custom-action.h  custom-gesture-controller.cpp  custom-gesture-controller.h  gesture-controller.cpp  gesture-controller.h  main.cpp  offset-volume-action.cpp  offset-volume-action.h  pulseaudio-adapter.cpp  pulseaudio-adapter.h  volume-window.cpp  volume-window.h  window.cpp  window.h
src/action/: action.h  offset-volume-action.cpp  offset-volume-action.h
src/controllers/: gesture-controller.cpp  gesture-controller.h  metadata-controller.cpp  metadata-controller.h
src/metadata/: metadata-provider.cpp  metadata-provider.h  metadata.h  playback-status.h  spotify-metadata-provider.cpp  spotify-metadata-provider.h
src/metadata-providers/: base-metadata-provider.cpp  base-metadata-provider.h  spotify-metadata-provider.cpp  spotify-metadata-provider.h  spotify-notifications-provider.cpp  spotify-notifications-provider.h  spotify-polling-provider.cpp  spotify-polling-provider.h  spotify-signals-provider.cpp  spotify-signals-provider.h
src/pulseaudio/: pulseaudio-adapter.cpp  pulseaudio-adapter.h
src/window/: window.cpp  window.h
src/windows/: album-icon-window.cpp  album-icon-window.h  metadata-window.cpp  metadata-window.h  volume-window.cpp  volume-window.h  windows-config.cpp  windows-config.h
